fix: content 변경될 때 elasticSearch index 계산하는 event 처리